--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "body-parser": "^1.19.0",
         "cookie-parser": "^1.4.5",
+        "dinero.js": "^1.9.1",
         "dotenv": "^10.0.0",
         "ejs": "^3.1.5",
         "express": "^4.17.1",
