--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
         "stripe": "^8.114.0",
         "summernote": "^0.8.12",
         "sweetalert": "^2.1.2",
+        "sweetalert2": "^11.3.3",
         "tempusdominus-bootstrap-4": "^5.1.2",
         "ti-icons": "^0.1.2",
         "tinymce": "^5.0.8",
