Implement Passport, Bcrypt and flash.
Use methodOverride to use DELETE action.

Optimize router. Move code to Stripe controller.

Implement middleware helper functions to verify if the user is authenticated or not.

Add style for flash.

Create config path for LocalStrategy and Passport.

Change Login and Logout methods.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@mdi/font": "^3.6.95",
         "ace-builds": "^1.2.9",
+        "bcrypt": "^5.0.1",
         "body-parser": "^1.19.0",
         "bootstrap": "^5.1.3",
         "bootstrap-datepicker": "^1.9.0",
@@ -29,6 +30,7 @@
         "dropzone": "^5.5.1",
         "ejs": "^3.1.5",
         "express": "^4.17.1",
+        "express-flash": "^0.0.2",
         "express-session": "^1.17.1",
         "flag-icon-css": "^3.3.0",
         "font-awesome": "4.7.0",
@@ -55,6 +57,7 @@
         "lightgallery": "^1.6.12",
         "memorystore": "^1.6.4",
         "merge-stream": "^2.0.0",
+        "method-override": "^3.0.0",
         "moment": "^2.29.1",
         "mongod": "^2.0.0",
         "mongodb": "^4.2.2",
@@ -63,6 +66,8 @@
         "nodemon": "^2.0.15",
         "nouislider": "^13.1.5",
         "owl-carousel-2": "0.0.3",
+        "passport": "^0.5.2",
+        "passport-local": "^1.0.0",
         "perfect-scrollbar": "^1.4.0",
         "popper.js": "^1.15.0",
         "progressbar.js": "1.0.1",
