Implement lingua for change languages of APP.

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "express": "^4.17.1",
         "express-flash": "^0.0.2",
         "express-session": "^1.17.1",
-        "flag-icon-css": "^3.3.0",
+        "flag-icon-css": "^3.5.0",
         "font-awesome": "4.7.0",
         "gulp-sourcemaps": "^2.6.3",
         "inputmask": "^4.0.8",
@@ -55,6 +55,7 @@
         "justgage": "1.2.2",
         "jvectormap": "2.0.4",
         "lightgallery": "^1.6.12",
+        "lingua": "^0.4.0",
         "memorystore": "^1.6.4",
         "merge-stream": "^2.0.0",
         "method-override": "^3.0.0",
