--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
         "mongodb": "^4.2.2",
         "mongoose": "^5.10.11",
         "morris.js06": "^0.6.6",
+        "node-openalpr": "^1.1.1",
+        "node-pre-gyp": "github:mapbox/node-pre-gyp#8036d17",
         "nodemon": "^2.0.15",
         "nouislider": "^13.1.5",
         "owl-carousel-2": "0.0.3",
@@ -81,6 +83,7 @@
         "select2-bootstrap-theme": "0.1.0-beta.10",
         "simple-line-icons": "2.4.1",
         "simplemde": "1.11.2",
+        "socket.io": "^4.4.1",
         "stripe": "^8.114.0",
         "summernote": "^0.8.12",
         "sweetalert": "^2.1.2",
