--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
         "mongodb": "^4.2.2",
         "mongoose": "^5.10.11",
         "morris.js06": "^0.6.6",
+        "node-fetch": "2.0",
         "node-openalpr": "^1.1.1",
         "node-pre-gyp": "github:mapbox/node-pre-gyp#8036d17",
         "nodemon": "^2.0.15",
