--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
         "dropzone": "^5.5.1",
         "ejs": "^3.1.5",
         "express": "^4.17.1",
+        "express-async-errors": "^3.1.1",
         "express-flash": "^0.0.2",
         "express-session": "^1.17.1",
         "flag-icon-css": "^3.5.0",
         "font-awesome": "4.7.0",
+        "fs": "^0.0.1-security",
         "gulp-sourcemaps": "^2.6.3",
+        "handlebars": "^4.7.7",
         "inputmask": "^4.0.8",
         "ion-rangeslider": "^2.3.0",
         "jquery": "^3.4.1",
@@ -52,6 +55,7 @@
         "jquery.repeater": "1.2.1",
         "js-cookie": "^3.0.1",
         "jsgrid": "1.5.3",
+        "jsonwebtoken": "^8.5.1",
         "justgage": "1.2.2",
         "jvectormap": "2.0.4",
         "lightgallery": "^1.6.12",
@@ -67,6 +71,7 @@
         "node-fetch": "2.0",
         "node-openalpr": "^1.1.1",
         "node-pre-gyp": "github:mapbox/node-pre-gyp#8036d17",
+        "nodemailer": "^6.7.2",
         "nodemon": "^2.0.15",
         "nouislider": "^13.1.5",
         "owl-carousel-2": "0.0.3",
