--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "flag-icon-css": "^3.5.0",
         "font-awesome": "4.7.0",
         "fs": "^0.0.1-security",
+        "googleapis": "^97.0.0",
         "gulp-sourcemaps": "^2.6.3",
         "handlebars": "^4.7.7",
         "inputmask": "^4.0.8",
