--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "autocare-subscriptions-app",
     "version": "1.0.0",
     "author": "cfboy",
-    "description": "Add Stripe Subscriptions Payments using Node.js",
+    "description": "AutoCare Memberships web application using Express, MongoDB, and Stripe.",
     "main": "app.js",
     "scripts": {
         "start": "nodemon app.js"
