--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "scripts": {
         "start": "nodemon app.js"
     },
+    "engines": {
+        "node": "16.14.0",
+        "npm": "8.3.1"
+    },
     "license": "ISC",
     "dependencies": {
         "@mdi/font": "^3.6.95",
