--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
         "mongoose": "^5.10.11",
         "morris.js06": "^0.6.6",
         "node-fetch": "2.0",
-        "node-pre-gyp": "github:mapbox/node-pre-gyp#8036d17",
+        "node-pre-gyp": "https://github.com/mapbox/node-pre-gyp.git#8036d17",
         "nodemailer": "^6.7.2",
         "nodemon": "^2.0.15",
         "nouislider": "^13.1.5",
