--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
         "bootstrap": "^5.1.3",
         "bootstrap-datepicker": "^1.9.0",
         "bootstrap-maxlength": "1.6.0",
-        "c3": "^0.7.1",
+        "c3": "^0.4.24",
         "chart.js": "^2.8.0",
         "clipboard": "^2.0.4",
         "codemirror": "^5.47.0",
         "colcade": "^0.2.0",
         "cookie-parser": "^1.4.6",
         "crypto": "^1.0.1",
-        "d3": "^5.9.2",
+        "d3": "^7.6.1",
         "dinero.js": "^1.9.1",
         "dotenv": "^10.0.0",
         "dropify": "0.2.2",
@@ -65,6 +65,7 @@
         "jvectormap": "2.0.4",
         "lightgallery": "^1.6.12",
         "lingua": "^0.4.0",
+        "log-timestamp": "^0.3.0",
         "memorystore": "^1.6.4",
         "merge-stream": "^2.0.0",
         "method-override": "^3.0.0",
@@ -73,13 +74,13 @@
         "mongodb": "^4.2.2",
         "mongoose": "^5.10.11",
         "morris.js06": "^0.6.6",
-        "node-fetch": "2.0",
+        "node-fetch": "^2.6.7",
         "node-pre-gyp": "https://github.com/mapbox/node-pre-gyp.git#8036d17",
         "nodemailer": "^6.7.2",
         "nodemon": "^2.0.15",
         "nouislider": "^13.1.5",
         "owl-carousel-2": "0.0.3",
-        "passport": "^0.5.2",
+        "passport": "^0.6.0",
         "passport-local": "^1.0.0",
         "perfect-scrollbar": "^1.4.0",
         "popper.js": "^1.15.0",
