--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
         "lightgallery": "^1.6.12",
         "lingua": "^0.4.0",
         "log-timestamp": "^0.3.0",
+        "mailtrap": "^3.0.1",
         "memorystore": "^1.6.4",
         "merge-stream": "^2.0.0",
         "method-override": "^3.0.0",
