--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
         "nouislider": "^13.1.5",
         "owl-carousel-2": "0.0.3",
         "passport": "^0.6.0",
+        "passport-google-oauth2": "^0.2.0",
         "passport-local": "^1.0.0",
         "perfect-scrollbar": "^1.4.0",
         "popper.js": "^1.15.0",
